--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@mikro-orm/core": "^4.5.3",
-    "@mikro-orm/postgresql": "^4.5.3",
+    "@mikro-orm/core": "^5.4.2",
+    "@mikro-orm/postgresql": "^5.4.2",
+    "@mikro-orm/reflection": "^5.4.2",
     "functional-red-black-tree": "^1.0.1",
     "immutable": "^4.0.0-rc.12",
     "json-stable-stringify": "^1.0.1",
@@ -76,7 +77,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "knex": "^0.21.15",
+    "knex": "^2.3.0",
     "mocha": "^8.0.1",
     "mochapack": "^2.0.6",
     "monaco-editor": "^0.20.0",
