--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
-    "extends": "./tsconfig.deno.json",
-    "compilerOptions": {
-        "target": "ES2019",
-        "module": "commonjs",
-        "sourceMap": true,
-        "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "types": [],
-        "skipLibCheck": true,
-        "moduleResolution": "node",
-        "isolatedModules": false,
-        "jsx": "react",
-        "declaration": true,
-        "declarationMap": true,
-        "declarationDir": "lib-types",
-        "outDir": "lib-types"
-    },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+  "extends": "./tsconfig.deno.json",
+  "compilerOptions": {
+    "target": "ES2019",
+    "module": "commonjs",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "types": [],
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "isolatedModules": false,
+    "jsx": "react",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "lib-types",
+    "outDir": "lib-types",
+    "strictPropertyInitialization": false
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
